fix(transactions): Align headers on medium screen

--- a/src/ducks/transactions/Transactions.styl
+++ b/src/ducks/transactions/Transactions.styl
@@ -53,9 +53,11 @@
         .bnk-op-desc
             cursor pointer
             maxed-flex-basis 60%
+            padding-left 3.25rem
         .bnk-op-amount
             cursor pointer
             maxed-flex-basis 40%
+            padding-right 3.5rem
         .bnk-op-actions
             width 150px
         .bnk-op-date
